# seevooplay

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: admin.py  apps.py  asgi.py  settings.py  wsgi.py
config/settings/: __init__.py  base.py  local.py.example  test.py
config/settings/formats/en/: formats.py
locale/en/LC_MESSAGES/: django.po
seevooplay/: admin.py  apps.py  emails.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
seevooplay/migrations/: 0001_initial.py  0002_auto_20210607_0031.py  0002_guest_legacy_uuid_guest_new_id_guest_short_uuid.py  0003_alter_event_end_datetime.py  0003_copy_uuid_and_assign_new_ids.py  0004_auto_20210606_1741.py  0004_swap_pk_to_integer.py  0005_alter_guest_legacy_uuid_alter_guest_short_uuid.py  0005_auto_20210606_1918.py  0006_event_raw_guests.py  0006_reply_invitation_sent.py  0007_alter_event_invitees.py  0007_auto_20210608_2123.py  0008_alter_guest_options.py  0009_rename_raw_guests_event_invitees.py  0010_alter_event_invitees.py  0011_alter_event_invitees.py  0012_alter_event_invitees.py  0013_alter_event_invitees.py  0014_alter_event_invitees.py  0015_alter_event_invitees.py  0016_alter_event_invitees.py  0017_alter_event_invitees.py  0018_alter_event_invitees.py  0019_alter_event_invitees.py  0020_alter_event_invitees.py  0021_alter_event_invitees.py  0022_alter_event_guests.py  0023_rename_reply_gueststatus.py  0024_auto_20210609_2233.py  0025_auto_20210609_2234.py  0026_auto_20210609_2246.py  0027_alter_event_invitees.py  0028_auto_20210801_1823.py  0029_alter_event_details.py  0030_auto_20210806_1633.py  0031_auto_20210807_2115.py  0032_alter_reply_extra_guests.py
seevooplay/static/seevooplay/css/: admin.css  email_guests.css  event.css  resend.css  seevooplay.css
seevooplay/templates/admin/seevooplay/event/: change_form.html  change_form_object_tools.html
seevooplay/templates/seevooplay/: base.html  email_guests.html  email_guests_email.txt  event.html  event_replies.html  invitation_email.txt  reply_notification_email.txt  resend.html  trumbowyg.js
seevooplay/templatetags/: add_to_calendar.py
seevooplay/tests/: conftest.py  test_add_to_calendar.py  test_event_admin.py  test_views.py
