[project]
name = "seevooplay"
version = "1.0.9"
description = "Seevooplay is a Django app for online invitations and RSVPs."
authors = [{ name = "Matthew Newton", email = "matthewn@mahnamahna.net" }]
requires-python = "~=3.8"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    "Django",
    "django-model-utils",
    "django-richtextfield",
    "Pillow",
    "django-extensions",
    "django-debugtools~=2.0",
]

[project.urls]
Homepage = "https://github.com/matthewn/seevooplay"
Repository = "https://github.com/matthewn/seevooplay"

[dependency-groups]
dev = [
    "django-debugtools",
    "Werkzeug",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
