[project]
name = "seevooplay"
version = "2.0.0"
description = "Seevooplay is a Django app for online invitations and RSVPs."
authors = [{ name = "Matthew Newton", email = "matthewn@mahnamahna.net" }]
requires-python = ">=3.11, <4"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["django"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    "Django>=5.2",
    "django-extensions",
    "django-model-utils>=5.0.0",
    "django-richtextfield>=1.6.2",
    "Pillow>=12.1.1",
    "shortuuid>=1.0.13",
]

[project.urls]
Homepage = "https://github.com/matthewn/seevooplay"
Repository = "https://github.com/matthewn/seevooplay"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.4",
    "coverage>=7.13.5",
    "django-debugtools",
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-randomly>=3.15.0",
    "Werkzeug",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"

[tool.coverage.run]
omit = [
    "*/migrations/*",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{311,312,313,314}-django{52,60}

[testenv]
package = editable
deps =
    django52: Django>=5.2,<6
    django60: Django>=6,<7
    pytest
    pytest-django
    pytest-cov
    pytest-randomly
    beautifulsoup4
    Werkzeug
commands = pytest {posargs}
"""
